# newton-forward-backward

./: CMakeLists.txt  README.md  main.cpp
